--- a/config.toml
+++ b/config.toml
@@ -285,7 +285,7 @@ enableGitInfo = false
   [[params.social]]
     icon = "cv"
     icon_pack = "ai"
-    link = "/files/my_resume.pdf"
+    link = "/files/oliveira_resume.pdf"
 
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
